Working. Pre refactor of CSV function

--- a/.env
+++ b/.env
@@ -1,14 +1,6 @@
 PLEX_URL=http://192.168.0.61:32400
 PLEX_TOKEN=None
 EXPORT_DIR=exports
-EXPORT_TYPE=csv
 LOG_DIR=logs
-LOG_LEVEL=error
-
-### DATABASE ###
-#DB_NAME=plexport
-#DB_TYPE
-#DB_USERNAME
-#DB_PASSWORD
-#DB_HOST
-#DB_PORT
+LOG_LEVEL=info
+SECTIONS=Music,Pre 1960
