--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-PLEX_URL=http://192.168.0.61:32400
+PLEX_URL=http://192.168.0.69:32400
 PLEX_TOKEN=None
 EXPORT_DIR=exports
 LOG_DIR=logs
 LOG_LEVEL=info
-SECTIONS=Music,Pre 1960
+SECTIONS=all_sections
